--- a/baca.html
+++ b/baca.html
@@ -1,96 +1,72 @@
-<!DOCTYPE html>
+<?php
+
+$json = file_get_contents('http://api.kalau.web.id/api/absen?nip=14650015&tgs=2016-01-01&tge=2016-10-31');
+$obj = json_decode($json);
+
+?>
+
 <html>
-<head>
-    <title>Convert JSON Data to HTML Table Example</title>
-    <style>
-        table, th, td 
-        {
-            margin:10px 0;
-            border:solid 1px #333;
-            padding:2px 4px;
-            font:15px Verdana;
-        }
-        th {
-            font-weight:bold;
-        }
-    </style>
-</head>
-<body>
-    <input type="button" onclick="presensi()" value="Create Table From JSON" />
-    <div id="showData"></div>
-</body>
-<script>
-    function presensi() {
-        var data_absensi_mobile = [
-            {
-				"id": "11",
-				"nip": "14650015",
-				"latitude": "-7.784395",
-				"longitude": "110.394295",
-				"presensi_ke": "1",
-				"photo": "http://orig12.deviantart.net/bb23/f/2015/227/a/5/head_by_iqbaladinurmansyah-d95tk1c.gif",
-				"macaddress": "asus keren",
-				"created_at": "2016-10-30 07:00:00"
-            },
-            {
-				"id": "10",
-				"nip": "14650015",
-				"latitude": "-7.784395",
-				"longitude": "110.394295",
-				"presensi_ke": "1",
-				"photo": "http://orig12.deviantart.net/bb23/f/2015/227/a/5/head_by_iqbaladinurmansyah-d95tk1c.gif",
-				"macaddress": "asusususus",
-				"created_at": "2016-10-29 07:00:00"
-            },
-			]
-			var data_finger_id=[
-			{
-				"finger_id": "10000",
-				"nip": "14650015",
-				"tag_date": "2016-10-29 17:00:00",
-				"finger_ip": "10.10.28.138"
-			},
-        ]
+<table border="1">
 
-        // EXTRACT VALUE FOR HTML HEADER. 
-        // ('Book ID', 'Book Name', 'Category' and 'Price')
-        var col = [];
-        for (var i = 0; i < data_absensi_mobile.length; i++) {
-            for (var key in data_absensi_mobile[i]) {
-                if (col.indexOf(key) === -1) {
-                    col.push(key);
-                }
-            }
-        }
-
-        // CREATE DYNAMIC TABLE.
-        var table = document.createElement("table");
-
-        // CREATE HTML TABLE HEADER ROW USING THE EXTRACTED HEADERS ABOVE.
-
-        var tr = table.insertRow(-1);                   // TABLE ROW.
-
-        for (var i = 0; i < col.length; i++) {
-            var th = document.createElement("th");      // TABLE HEADER.
-            th.innerHTML = col[i];
-            tr.appendChild(th);
-        }
-
-        // ADD JSON DATA TO THE TABLE AS ROWS.
-        for (var i = 0; i < data_absensi_mobile.length; i++) {
-
-            tr = table.insertRow(-1);
-
-            for (var j = 0; j < col.length; j++) {
-                var tabCell = tr.insertCell(-1);
-                tabCell.innerHTML = data_absensi_mobile[i][col[j]];
-            }
-        }
-
-        // FINALLY ADD THE NEWLY CREATED TABLE WITH JSON DATA TO A CONTAINER.
-        var divContainer = document.getElementById("showData");
-        divContainer.innerHTML = "";
-        divContainer.appendChild(table);
-    }
-</script>
+	<thead>
+		<tr>
+			<td colspan="8"><center>DATA_ABSENSI_MOBILE</center></td>
+		</tr>
+		<th>Id</th>
+		<th>NIP</th>
+		<th>LATITUDE</th>
+		<th>LONGITUDE</th>
+		<th>PRESENSI_KE</th>
+		<th>PHOTO</th>
+		<th>MACADDRESS</th>
+		<th>CREATED_AT</th>
+	</thead>
+	<tbody>
+		<?php
+			for ($i=0 ; $i<2; $i++){
+				$link = $obj->presensi->data_absensi_mobile[$i]->photo;
+				echo "<tr>
+					<td> ".$obj->presensi->data_absensi_mobile[$i]->id."</td>
+					<td> ".$obj->presensi->data_absensi_mobile[$i]->nip." </td>
+					<td> ".$obj->presensi->data_absensi_mobile[$i]->latitude." </td>
+					<td> ".$obj->presensi->data_absensi_mobile[$i]->longitude." </td>
+					<td> ".$obj->presensi->data_absensi_mobile[$i]->presensi_ke." </td>
+					<td> ".$obj->presensi->data_absensi_mobile[$i]->photo." </td>
+					<td> ".$obj->presensi->data_absensi_mobile[$i]->macaddress." </td>
+					<td> ".$obj->presensi->data_absensi_mobile[$i]->created_at." </td>
+				</tr>";
+			} 
+		?>
+	</tbody>
+</table>
+<table border="1">
+	<thead>
+		<tr>
+			<td colspan="8"><center>DATA_ABSENSI_FINGER</center></td>
+		</tr>
+		<th>FINGER_ID</th>
+		<th>NIP</th>
+		<th>TAG_DATE</th>
+		<th>FINGER_IP</th>
+	</thead>
+	<tbody>
+	<?php
+		echo "<tr>
+			<td> ".$obj->presensi->data_absensi_finger[0]->finger_id."</td>
+			<td> ".$obj->presensi->data_absensi_finger[0]->nip."</td>
+			<td> ".$obj->presensi->data_absensi_finger[0]->tag_date."</td>
+			<td> ".$obj->presensi->data_absensi_finger[0]->finger_ip."</td>
+			</tr>";
+	?>
+	</tbody>
+</table>
+<table border="1">
+	<thead>
+		<th>Latest Update</th>
+	</thead>
+	<tbody>
+		<tr>
+			<td><?php echo $obj->presensi->latest_update; ?></td>
+	</tbody>
+</table>
 </html>
